adjusts alt text of all instances of the milmove logo to not include the word logo, as the guidance in the WCAG about alt tag for logotypes suggest

--- a/public/static/maintenance.html
+++ b/public/static/maintenance.html
@@ -13,7 +13,7 @@
           <div class="usa-navbar">
             <div class="usa-logo" id="basic-logo">
               <em class="usa-logo__text">
-                <img src="logo.svg" alt="Milmove Logo">
+                <img src="logo.svg" alt="Milmove">
               </em>
             </div>
           </div>
